--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <body>
-  <h1>FIONA MARTIN</h1>
-  <p>This is a test site!</p>
+  <h1>FIAT LUX</h1>
+  <p>This is a test site</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
